# private-reading

./: .checkov.yml  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AWS-SAP-C02.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  fishChanges.md  main.py  mypy.ini  pauseStatus.md  project_qwen3tts_research.md  pyproject.toml  requirements.txt  sweep.py
.claude/: settings.json
.gitea/workflows/: deploy-function.yml  deploy-jobstore.yml  deploy-spa.yml  deploy-worker.yml  security.yml  terraform.yml
.github/workflows/: deploy-function.yml  deploy-jobstore.yml  deploy-spa.yml  deploy-worker.yml  security.yml  terraform.yml
core/: __init__.py  audio_stitcher.py  chunk_manager.py  file_watcher.py  output_manager.py  text_extractor.py  tts_client.py
docs/: api-reference.md  design.md  implementation-plan.md  myAudibleRequirements.md  test-plan.md  user-guide.md
fn/: Dockerfile  func.py  func.yaml  requirements.txt
jobstore/: app.py  jobstore.service  requirements.txt
myaudible/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  models.py
myaudible/core/: audio_stitcher.py  chunk_manager.py  file_watcher.py  job_tracker.py  output_manager.py  pipeline.py  text_extractor.py  tts_client.py
myaudible/utils/: __init__.py  file_utils.py  logging.py  logging_config.py
plans/: .env.example  README-deployment.md  install.sh  phase2-implementation.md  phase3-implementation.md  phase3-test-tasks.md  private-reading-enhancement.md  semaphore-size-implementation.md
plans/systemd/: myaudible-input.path  myaudible.service
private_reading/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  models.py
private_reading/core/: __init__.py  audio_stitcher.py  chunk_manager.py  file_watcher.py  job_tracker.py  output_manager.py  pipeline.py  text_extractor.py  tts_client.py
private_reading/utils/: __init__.py  file_utils.py  logging.py  logging_config.py
spa/: app.js  index.html  style.css
terraform/: backend.hcl.example  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf  versions.tf
terraform/modules/api/: main.tf  outputs.tf  variables.tf
terraform/modules/cognito/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/functions/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_systemd_integration.py
tests/core/: __init__.py  test_audio_stitcher.py  test_chunk_manager.py  test_cli_interface.py  test_exceptions.py  test_file_watcher.py  test_job_tracker.py  test_myaudibleapp.py  test_output_manager.py  test_pipeline_integration.py  test_text_extractor.py  test_tts_client.py  test_tts_client_multi_provider.py
tests/e2e/: __init__.py  test_end_to_end.py
tests/performance/: test_performance.py
tests/utils/: __init__.py
tools/: generate_voices.py  tts_benchmark.py
utils/: logging.py
web/: __init__.py  pipeline_runner.py  security.py  server.py
web/static/: index.html
worker/: Dockerfile  requirements.txt  worker.py
worker/k8s/: configmap.yaml  deployment.yaml  fish-tts-service.yaml  secret.yaml.example
